--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #06111c;
+  --primary-color: #071727;
   --secondary-color: #db2b39;
   --terciary-color: #fff8f0;
 }
@@ -17,4 +17,16 @@
 html, body {
   background-color: var(--primary-color);
   width: 100%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
